--- a/private/src/styles/pages/article/_share.scss
+++ b/private/src/styles/pages/article/_share.scss
@@ -19,3 +19,7 @@ ul.article-share {
 .article-share img {
   max-height: 100%;
 }
+
+.rtl ul.article-share {
+  margin: 0;
+}
